--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,5 +7,5 @@ tasks:
 
 vscode:
   extensions:
-    - ionide.ionide-fsharp@5.0.0-preview03:Uwp5uxggOSeR9WYky2Kt2w==
     - ms-dotnettools.csharp@1.23.8:iO8KaJulQm9UBFXlmZNiog==
+    - ionide.ionide-fsharp@4.17.0:mFp/s25UhjsPtma7ipgAFg==
